feat: add OIDC authentication and owned games
